"""
Tic-Tac-Toe with A* search opponent. 🤞
"""

module(
    name = "tictactoe_astar",
    version = "0.0.0",
    compatibility_level = 1,
)

# https://github.com/bazel-contrib/toolchains_llvm/blob/master/toolchain/internal/llvm_distributions.bzl
# https://github.com/bazel-contrib/toolchains_llvm/blob/2fa9fa1556e7ed85227d8a9049cd3f54f1661258/tests/MODULE.bazel#L73
bazel_dep(name = "toolchains_llvm", version = "v1.1.2")

# To directly use a commit from GitHub, replace commit with the commit you want.
# Otherwise, omit this block.
git_override(
    module_name = "toolchains_llvm",
    commit = "e0ffa169a2572e9f35a52de60fe746831d1e2a0a",
    remote = "https://github.com/bazel-contrib/toolchains_llvm",
)

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "18.1.4",
)
use_repo(llvm, "llvm_toolchain")

# use_repo(llvm, "llvm_toolchain_llvm") # if you depend on specific tools in scripts
register_toolchains("@llvm_toolchain//:all")
