"""
Tic-Tac-Toe with AI. 🤞
"""

module(
    name = "tictactoe_ai",
    version = "0.0.0",
    compatibility_level = 1,
)

#-------------------------------------------------------------
# Hedron's Compile Commands Extractor for Bazel
#-------------------------------------------------------------

# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
)

#-------------------------------------------------------------
# LLVM Toolchain
#-------------------------------------------------------------

# https://github.com/bazel-contrib/toolchains_llvm/blob/master/toolchain/internal/llvm_distributions.bzl
# https://github.com/bazel-contrib/toolchains_llvm/blob/2fa9fa1556e7ed85227d8a9049cd3f54f1661258/tests/MODULE.bazel#L73
bazel_dep(name = "toolchains_llvm", version = "v1.1.2")

# To directly use a commit from GitHub, replace commit with the commit you want.
# Otherwise, omit this block.
git_override(
    module_name = "toolchains_llvm",
    commit = "e0ffa169a2572e9f35a52de60fe746831d1e2a0a",
    remote = "https://github.com/bazel-contrib/toolchains_llvm",
)

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "18.1.4",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

#-------------------------------------------------------------
# GLFW
#-------------------------------------------------------------

GLFW_VERSION = "3.3.10"

bazel_dep(name = "rules_cc", version = "0.0.9")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "glfw",
    build_file = "@//third_party/glfw:BUILD",
    integrity = "sha256-T/GKM3faRlOGN02BJ+e3NJtoUojLjhcSL34Refc3adU=",
    strip_prefix = "glfw-{}".format(GLFW_VERSION),
    urls = ["https://github.com/glfw/glfw/archive/{}.tar.gz".format(GLFW_VERSION)],
)

bazel_dep(name = "glew", version = "2.2.0")
